# r2Nova

./: .eslintrc.cjs  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  FUNCTIONAL-REQUIREMENTS.md  PROJECT.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/commands/: account.rs  bucket.rs  file.rs  mod.rs  system.rs  theme.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: config_manager.rs  mod.rs  r2_client.rs  transfer_manager.rs
src/components/: LanguageSettings.tsx  ThemeProvider.tsx  ThemeSettings.tsx  TransferProgress.tsx
src/lib/: objectKeys.test.ts  objectKeys.ts
src/pages/: AccountManager.tsx  BucketBrowser.tsx  TransferCenter.tsx
src/services/: dialogService.ts  loggerService.ts  r2Service.ts  systemService.ts
src/stores/: accountStore.ts  bucketStore.ts  i18nStore.test.ts  i18nStore.ts  themeStore.ts  transferStore.ts
src/styles/: globals.css
src/types/: index.ts
src/ulw/: index.ts  moduleManager.ts  types.ts
stitch/account_management/: code.html
stitch/bucket_browser/: code.html
stitch/nova_flux/: DESIGN.md
(+7 files in other folders)
