[package]
name = "r2nova"
version = "0.1.0"
description = "R2Nova - Cloudflare R2 Desktop Client"
authors = ["R2Nova Team"]
edition = "2021"
rust-version = "1.75"

[profile.release]
opt-level = 3
lto = true
strip = true

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.7", features = ["v4"] }
keyring = "2.3"
aes-gcm = "0.10"
rand = "0.8"
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.15"
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
bytes = "1.5"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = ["Win32_Graphics_Dwm", "Win32_Foundation", "Win32_System_Registry", "Win32_System_SystemServices"] }

[dev-dependencies]
tauri = { version = "2.0", features = ["test"] }
tokio-test = "0.4"
mockall = "0.12"

[lib]
name = "r2nova_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "r2nova"
path = "src/main.rs"
